@@ -2,6 +2,7 @@ Revision history for lua-MessagePack
 
 0.5.1
 	fix extra bytes detection (see PR #26)
+	allows ipairs(mp.packers) (see PR #27)
 
 0.5.0  Fri Mar 10 17:07:20 2017
 	export unpack_cursor instead of unpackers (see issue #23)
